# CargoNetSim

./: .all-contributorsrc  .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindDependencies.cmake
config/: config.xml  params.yaml
resources/: CargoNetSim.qrc
src/: CMakeLists.txt  Version.h.in  main.cpp
src/Backend/: BackendInit.h  CMakeLists.txt
src/Backend/Clients/BaseClient/: CommandProcessor.cpp  CommandProcessor.h  RabbitMQHandler.cpp  RabbitMQHandler.h  ResponseProcessor.cpp  ResponseProcessor.h  SimulationClientBase.cpp  SimulationClientBase.h
src/Backend/Clients/ShipClient/: ShipSimulationClient.cpp  ShipSimulationClient.h  ShipState.cpp  ShipState.h  SimulationResults.cpp  SimulationResults.h  SimulationSummaryData.cpp  SimulationSummaryData.h
src/Backend/Clients/TerminalClient/: TerminalSimulationClient.cpp  TerminalSimulationClient.h
src/Backend/Clients/TrainClient/: SimulationResults.cpp  SimulationResults.h  SimulationSummaryData.cpp  SimulationSummaryData.h  TrainNetwork.cpp  TrainNetwork.h  TrainSimulationClient.cpp  TrainSimulationClient.h  TrainState.cpp  TrainState.h
src/Backend/Clients/TruckClient/: AsyncTripManager.cpp  AsyncTripManager.h  ContainerManager.cpp  ContainerManager.h  IntegrationLink.cpp  IntegrationLink.h  IntegrationLinkDataReader.cpp  IntegrationLinkDataReader.h  IntegrationNode.cpp  IntegrationNode.h  IntegrationNodeDataReader.cpp  IntegrationNodeDataReader.h  MessageFormatter.cpp  MessageFormatter.h  SimulationConfig.cpp  SimulationConfig.h  SimulationResults.cpp  SimulationResults.h  SimulationSummaryData.cpp  SimulationSummaryData.h  TransportationGraph.cpp  TransportationGraph.h  TripEndCallback.cpp  TripEndCallback.h  TruckNetwork.cpp  TruckNetwork.h  TruckSimulationClient.cpp  TruckSimulationClient.h  TruckSimulationManager.cpp  TruckSimulationManager.h  TruckState.cpp  TruckState.h
src/Backend/Commons/: ClientType.h  DirectedGraph.cpp  DirectedGraph.h  DirectedGraphBase.cpp  DirectedGraphBase.h  LoggerInterface.h  ShortestPathResult.h  TerminalInterface.cpp  TerminalInterface.h  ThreadSafetyUtils.cpp  ThreadSafetyUtils.h  TransportationMode.cpp  TransportationMode.h
src/Backend/Controllers/: CargoNetSimController.cpp  CargoNetSimController.h  ConfigController.cpp  ConfigController.h  NetworkController.cpp  NetworkController.h  RegionDataController.cpp  RegionDataController.h  VehicleController.cpp  VehicleController.h
src/Backend/Models/: BaseNetwork.cpp  BaseNetwork.h  BaseObject.cpp  BaseObject.h  Path.cpp  Path.h  PathSegment.cpp  PathSegment.h  Route.cpp  Route.h  ShipSystem.cpp  ShipSystem.h  SimulationTime.cpp  SimulationTime.h  Terminal.cpp  Terminal.h  TrainNetwork.cpp  TrainNetwork.h  TrainSystem.cpp  TrainSystem.h  TruckNetwork.cpp  TruckNetwork.h
src/Backend/Utils/: Utils.h
src/GUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/GUI/Commons/: NetworkType.h
src/GUI/Controllers/: BasicButtonController.cpp  BasicButtonController.h  HeartbeatController.cpp  HeartbeatController.h  NetworkController.cpp  NetworkController.h  ToolbarController.cpp  ToolbarController.h  UtilityFunctions.cpp  UtilityFunctions.h  ViewController.cpp  ViewController.h
src/GUI/Items/: AnimationObject.h  BackgroundPhotoItem.cpp  BackgroundPhotoItem.h  ConnectionLabel.cpp  ConnectionLabel.h  ConnectionLine.cpp  ConnectionLine.h  DistanceMeasurementTool.cpp  DistanceMeasurementTool.h  GlobalTerminalItem.cpp  GlobalTerminalItem.h  GraphicsObjectBase.cpp  GraphicsObjectBase.h  MapLine.cpp  MapLine.h  MapPoint.cpp  MapPoint.h  RegionCenterPoint.cpp  RegionCenterPoint.h  ShapeIcon.cpp  ShapeIcon.h  TerminalItem.cpp  TerminalItem.h
src/GUI/Utils/: ApplicationLogger.cpp  ApplicationLogger.h  ColorPalette.cpp  ColorPalette.h  ColorUtils.cpp  ColorUtils.h  ErrorHandlers.cpp  ErrorHandlers.h  IconCreator.cpp  IconCreator.h  LoggerAdapter.cpp  LoggerAdapter.h  PathFindingWorker.cpp  PathFindingWorker.h  PathReportExporter.cpp  PathReportExporter.h  PathReportGenerator.cpp  PathReportGenerator.h  SimulationValidationWorker.cpp  SimulationValidationWorker.h
src/GUI/Widgets/: ColorPickerDialog.cpp  ColorPickerDialog.h  ContainerManagerWidget.cpp  ContainerManagerWidget.h  CustomMainWindow.cpp  CustomMainWindow.h  CustomProgressBar.cpp  CustomProgressBar.h  GraphicsScene.cpp  GraphicsScene.h  GraphicsView.cpp  GraphicsView.h  InterfaceSelectionDialog.cpp  InterfaceSelectionDialog.h  NetworkManagerDialog.cpp  NetworkManagerDialog.h  NetworkMoveDialog.cpp  NetworkMoveDialog.h  NetworkSelectionDialog.cpp  NetworkSelectionDialog.h  PathComparisonDialog.cpp  PathComparisonDialog.h  PropertiesPanel.cpp  PropertiesPanel.h  RegionManagerWidget.cpp  RegionManagerWidget.h  ScrollableToolBar.cpp  ScrollableToolBar.h  SetCoordinatesDialog.cpp  SetCoordinatesDialog.h  SettingsWidget.cpp  SettingsWidget.h  ShipManagerDialog.cpp  ShipManagerDialog.h  ShortestPathTable.cpp  ShortestPathTable.h  SpinnerWidget.cpp  SplashScreen.cpp  SplashScreen.h  TerminalSelectionDialog.cpp  (+3 more)
src/installer/: BuildInstaller.bat  CMakeLists.txt
tests/: CMakeLists.txt  TerminalClientTest.cpp
